# CRAG-Ollama-Chat

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
.github/workflow/: streamlit-app.yml
.github/workflows/: streamlit-app.yml
