[tool.poetry]
name = "langgraph-crag-demo"
version = "0.1.0"
description = ""
authors = ["Nagi-ovo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"
langchain-core = "^0.1.33"
langgraph = "^0.0.30"
langchain-openai = "^0.1.1"
langchain-community = "^0.0.34"
langchain-google-genai = "^1.0.2"
streamlit = "^1.33.0"
beautifulsoup4 = "^4.12.3"
chromadb = "^0.5.0"
langchainhub = "^0.1.15"
nest-asyncio = "^1.6.0"
gpt4all = "^2.6.0"
watchdog = "^4.0.0"
httpx = {extras = ["socks"], version = "^0.27.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
